--- a/roles/glance/templates/glance-api.j2
+++ b/roles/glance/templates/glance-api.j2
@@ -974,6 +974,7 @@ filesystem_store_datadir = /var/lib/glance/images/
 [keystone_authtoken]
 auth_uri = http://{{ keystone_hostname }}:5000
 auth_url = http://{{ keystone_hostname }}:35357
+memcached_servers = {{ memcached_host }}:11211
 auth_plugin = password
 project_domain_id = default
 user_domain_id = default
