--- a/roles/keystone/templates/admin-openrc.j2
+++ b/roles/keystone/templates/admin-openrc.j2
@@ -5,4 +5,4 @@ export OS_USERNAME=admin
 export OS_PASSWORD={{ keystone_admin_token }}
 export OS_AUTH_URL=http://{{ controller_hostname }}:35357/v3
 export OS_IDENTITY_API_VERSION=3
-export OS_IMAGE_API_VERSION=2
+#export OS_IMAGE_API_VERSION=2
