--- a/roles/mariadb/templates/my.j2
+++ b/roles/mariadb/templates/my.j2
@@ -3,5 +3,6 @@ bind-address = {{ MYSQL_BIND_ADDRESS }}
 default-storage-engine = innodb
 innodb_file_per_table = on
 max_connections = 10240
+#max_connect_errors = 20480
 collation-server = utf8_general_ci
 character-set-server = utf8
